# my-prefect-flows

./: .dockerignore  .env.content_analysis  .env.example  .gitignore  02-etl.py  =4.13.0  CLAUDE.md  Dockerfile  NEW_ARCHITECTURE_README.md  README.md  SOLID_IMPLEMENTATION_SUMMARY.md  demo_rss_enhancement.py  deploy_content_analysis.py  docker-compose.yml  example_content_analysis.py  prefect.yaml  pyproject.toml  sitemap_workflow.py  test_content_analysis.py  test_solid_architecture.py  verify_adr_002.py
.devcontainer/: README.md  devcontainer.json  setup.sh
config/: llm_config.json.example
deployments/: README.md  deploy_rss_feeds.py  sites_rss_config.yaml
docs/: ADR写作规范.md  RSS_CONTENT_ENHANCEMENT.md  SOLID_REFACTORING_REPORT.md  content_analysis_guide.md  quick-start.md  r2-upload-integration.md  个人项目决策记录规范.md  轻量决策记录规范.md  项目决策记录规范.md
docs/adr/: 001-rss-semantic-summary-architecture.md  002-adopt-pyrss2gen-library.md  003-incremental-rss-update-architecture.md  004-intelligent-content-analysis-system.md
flows/: content_analysis_flow.py  sitemap_to_rss.py  sitemap_to_rss_refactored.py  sitemap_workflow.py
lib/: __init__.py  batch.py  config.py  container.py  content_analysis.py  content_analyzer.py  content_extractor.py  content_optimizer.py  fetchers.py  filters.py  incremental_state.py  interfaces.py  llm_manager.py  logging.py  processors.py  r2.py  r2_uploader.py  rss_generator.py  rss_generator_legacy.py  sitemap.py  storage.py  transformers.py  utils.py
tests/: test_content_analysis.py  test_rss_generator.py
