[project]
name = "perfect"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.3.1",
    "prefect>=3.4.6",
    "prefect-dbt>=0.7.0",
    "prefect-docker>=0.6.6",
    "prefect-github>=0.3.1",
    "boto3>=1.35.0",
    "python-dotenv>=1.0.0",
    "beautifulsoup4>=4.13.0",
    "pyyaml>=6.0.2",
]
